add new products

--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
         data-slides-per-group="1,1,1"
         data-space-between="0,0,0"
         data-initial-slide="0,0,0"
+        data-loop="true"
       >
         <div class="container">
           <h2 class="title title--h2 yellow">Продукты, участвующие в&nbsp;акции</h2>
@@ -269,44 +270,101 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="image">
-                  <img src="./assets/img/productions/1.webp" alt="" />
+                  <img src="./assets/img/products/1.webp" alt="President" width="192" />
                 </div>
                 <h3>Brie</h3>
                 <p>Классический сыр&nbsp;с&nbsp;благородной плесенью, знаменитый своей бархатистой корочкой и&nbsp;глубоким сливочным вкусом</p>
               </div>
+
               <div class="swiper-slide">
                 <div class="image">
-                  <img src="./assets/img/productions/2.webp" alt="" />
+                  <img src="./assets/img/products/2.webp" alt="President" width="264" />
                 </div>
                 <h3>Camembert</h3>
-                <p>Легендарный сыр с&nbsp;нежной сердцевиной и&nbsp;пикантным вусом&nbsp;тонкой бархатистой&nbsp;корочки</p>
+                <p>Легендарный сыр с&nbsp;нежной сердцевиной и&nbsp;пикантным вусом тонкой бархатистой корочки</p>
               </div>
+
               <div class="swiper-slide">
                 <div class="image">
-                  <img src="./assets/img/productions/3.webp" alt="" />
+                  <img src="./assets/img/products/3.webp" alt="President" width="302" />
                 </div>
                 <h3>Le Cremiot Extra Fondant</h3>
-                <p>Сыр с&nbsp;нежнейшей кремовой текстурой, который буквально тает во&nbsp;рту.</p>
+                <p>Сыр&nbsp;с&nbsp;нежнейшей кремовой текстурой, который буквально тает во&nbsp;рту.</p>
               </div>
+
               <div class="swiper-slide">
                 <div class="image">
-                  <img src="./assets/img/productions/4.webp" alt="" />
+                  <img src="./assets/img/products/4.webp" alt="President" width="146" />
                 </div>
-                <h3>Royal Bleu</h3>
+                <h3>Snack France</h3>
+                <p>Уникальный насыщенный вкус с&nbsp;пикантными дымными нотками и&nbsp;сливочным послевкусием</p>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./assets/img/products/5.webp" alt="President" width="244" />
+                </div>
+                <h3>Petit Brie</h3>
+                <p>Классический сыр&nbsp;с&nbsp;благородной плесенью, знаменитый своей бархатистой корочкой</p>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./assets/img/products/6.webp" alt="President" width="325" />
+                </div>
+                <h3>Lingot</h3>
+                <p>Сыр с&nbsp;белой корочкой, идеально подойдёт для сэндвичей</p>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./assets/img/products/7.webp" alt="President" width="226" />
+                </div>
+                <h3>Camembert Grill</h3>
+                <p>Легендарный сыр с&nbsp;нежной сердцевиной и&nbsp;пикантным вусом тонкой бархатистой корочки</p>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./assets/img/products/8.webp" alt="President" width="326" />
+                </div>
+                <h3>Brie</h3>
+                <p>Классический сыр&nbsp;с&nbsp;благородной плесенью, знаменитый своей бархатистой корочкой</p>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./assets/img/products/9.webp" alt="President" width="300" />
+                </div>
+                <h3>Royal Blue</h3>
                 <p>
-                  Сыр с&nbsp;голубой плесенью и&nbsp;уникальным вкусом, который достигается благодаря длинному сроку созревания (до&nbsp;90&nbsp;дней)
+                  Сыр&nbsp;с&nbsp;голубой плесенью и&nbsp;уникальным вкусом, который достигается благодаря длинному сроку созревания
+                  (до&nbsp;90&nbsp;дней)
                 </p>
               </div>
+
               <div class="swiper-slide">
                 <div class="image">
-                  <img src="./assets/img/productions/5.webp" alt="" />
+                  <img src="./assets/img/products/10.webp" alt="President" width="260" />
+                </div>
+                <h3>Royal Blue</h3>
+                <p>
+                  Сыр&nbsp;с&nbsp;голубой плесенью и&nbsp;уникальным вкусом, который достигается благодаря длинному сроку созревания
+                  (до&nbsp;90&nbsp;дней)
+                </p>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./assets/img/products/11.webp" alt="President" width="300" />
                 </div>
                 <h3>La Brique</h3>
                 <p>Тонкая корочка, текучая текстура и&nbsp;бесподобный вкус с&nbsp;прятными нотками тёплого молока и&nbsp;фундка</p>
               </div>
+
               <div class="swiper-slide">
                 <div class="image">
-                  <img src="./assets/img/productions/6.webp" alt="" />
+                  <img src="./assets/img/products/12.webp" alt="President" width="200" />
                 </div>
                 <h3>Red Snack</h3>
                 <p>Уникальный насыщенный вкус с&nbsp;пикантными дымными нотками и&nbsp;сливочным послевкусием</p>
